--- a/etc/sxemacs.1
+++ b/etc/sxemacs.1
@@ -676,7 +676,7 @@ searches for packages in these places by default...
 
 .PP
 .SH BUGS AND HELP
-There is a issue tracker at http://issues.sxemacs.org/, for reporting
+There is a issue tracker at https://issues.sxemacs.org/, for reporting
 .I SXEmacs
 bugs.  But before reporting something
 as a bug, please try to be sure that it really is a bug, not a
@@ -792,7 +792,7 @@ For more information about \fISXEmacs\fP, see the
 look in the file $PREFIX/share/sxemacs-$VERSION/etc/NEWS,
 or point your Web browser at
 .PP
-http://www.sxemacs.org/
+https://www.sxemacs.org/
 .PP
 for up-to-the-minute information about \fISXEmacs\fP.
 .PP
@@ -804,4 +804,4 @@ inside of \fISXEmacs\fP.
 .PP
 The latest version of \fISXEmacs\fP can be downloaded from
 .PP
-http://downloads.sxemacs.org/
+https://downloads.sxemacs.org/
