Always use the system malloc (removes gmalloc.c malloc.c).
This changeset removes our in-house malloc.c and gmalloc.c and switches to
always using the system provided malloc.

	* src/mem/gmalloc.c: Removed.

	* src/mem/malloc.c: Removed.

	* info/internals/internals.texi (Low-Level Modules): Nuke
	descriptions for gmalloc.c and malloc.c, update description for
	free-hook.c

	* src/ui/X11/device-x.c (x_delete_device): 'FREE_CHECKING' is
	never defined and __free_hook is never used so remove crusty bits
	of code conditional to it.

	* src/mem/Makefile.am (EXTRA_libmemalloc_a_SOURCES): Remove
	gmalloc.c and malloc.c.

	* src/mem/free-hook.c: Remove all of the old gmalloc debugging
	stuff.

	* src/mem/ralloc.c: Use HAVE_GLIBC instead of DOUG_LEA_MALLOC.
	(Free_Addr_Block): Use void because caddr_t hasn't been a thing
	for at least a hundred years.

	* src/regex.c: Use HAVE_GLIBC instead of DOUG_LEA_MALLOC.

	* src/alloc.c: Use HAVE_GLIBC instead of DOUG_LEA_MALLOC.
	Ditto for GNU_MALLOC.
	(malloced_storage_size): Because it's always system malloc, update
	this to use GNU malloc accounting when on a glibc system.

	* m4/sxe-summary.m4 (SXE_SUMMARY): It's always system malloc now
	so no need to say if GNU malloc is used.

	* src/emacs.c (main): Use HAVE_MALLOC_WARNING instead of
	_NO_MALLOC_WARNING_
	Use HAVE_GLIBC instead of DOUG_LEA_MALLOC.
	(Fdump_emacs): Don't use disable_free_hook().

	* src/mem/vm-limit.c: Use HAVE_MALLOC_WARNING instead of
	_NO_MALLOC_WARNING_ and reverse the condition sense.

	* m4/sxe-libc.m4 (SXE_CHECK_LIBC): Define HAVE_GLIBC.

	* configure.ac: Removed  --with-dlmalloc, --with-system-malloc
	Define HAVE_MALLOC_WARNING instead of _NO_MALLOC_WARNING_.
	Remove check for malloc_set_state() it's not used anywhere.
	Don't give reasons why or not GNU malloc is used because it's
	not.
	Don't define DOUG_LEA_MALLOC.
	Don't add gmalloc.o or malloc.o to MEMALLOC_OBJS.
	Define HAVE_LIBMCHECK.
	Add -lmcheck to MEMALLOC_LIBS.

Signed-off-by: Steve Youngs <st

--- a/info/internals/internals.texi
+++ b/info/internals/internals.texi
@@ -3676,8 +3676,6 @@ data space when dumping.
 alloca.c
 free-hook.c
 getpagesize.h
-gmalloc.c
-malloc.c
 mem-limits.h
 ralloc.c
 vm-limit.c
@@ -3686,16 +3684,6 @@ vm-limit.c
 These handle basic C allocation of memory.  @file{alloca.c} is an emulation of
 the stack allocation function @code{alloca()} on machines that lack
 this. (SXEmacs makes extensive use of @code{alloca()} in its code.)
-
-@file{gmalloc.c} and @file{malloc.c} are two implementations of the standard C
-functions @code{malloc()}, @code{realloc()} and @code{free()}.  They are
-often used in place of the standard system-provided @code{malloc()}
-because they usually provide a much faster implementation, at the
-expense of additional memory use.  @file{gmalloc.c} is a newer implementation
-that is much more memory-efficient for large allocations than @file{malloc.c},
-and should always be preferred if it works. (At one point, @file{gmalloc.c}
-didn't work on some systems where @file{malloc.c} worked; but this should be
-fixed now.)
 
 @cindex relocating allocator
 @file{ralloc.c} is the @dfn{relocating allocator}.  It provides
@@ -3715,7 +3703,9 @@ which can speed things up; but it can still cause noticeable performance
 degradation.)
 
 @file{free-hook.c} contains some debugging functions for checking for invalid
-arguments to @code{free()}.
+arguments to @code{free()}.  Or, at least, it use to.  Now it contains
+code to aid in debugging GCPRO functions.  Although, at the time of
+writing, they aren't yet being used.
 
 @file{vm-limit.c} contains some functions that warn the user when memory is
 getting low.  These are callback functions that are called by @file{gmalloc.c}
